--- a/pagerank/index.html
+++ b/pagerank/index.html
@@ -1,4 +1,4 @@
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="app.js"></script>
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
